# relay

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  pyrightconfig.json  relay.spec  relay_state.db
.github/workflows/: release.yml
apps/: __init__.py  instagram.py  reddit.py  tiktok.py  youtube.py
automation/: __init__.py  browser.py  downloader.py  media_utils.py  uploader.py
cli/: __init__.py  main.py  update.py  version.py
desktop/: __init__.py
docs/: ARCHITECTURE.md
examples/: instagram_to_youtube.yaml
pipelines/: __init__.py  custom.py  insta_to_youtube.py  tiktok_to_shorts.py
plugins/: __init__.py
plugins/common/: __init__.py  plugin.py
plugins/common/steps/: __init__.py  ffmpeg_step.py  notify_step.py
plugins/instagram/: __init__.py  auth.py  extractor.py  plugin.py
plugins/instagram/steps/: __init__.py  download.py  metadata.py
plugins/youtube/: __init__.py  auth.py  plugin.py
plugins/youtube/steps/: __init__.py  upload.py
src/relay/adapters/: __init__.py
src/relay/adapters/browser/: __init__.py  anti_detect.py  (+3 more)
src/relay/contracts/: __init__.py  browser.py  plugin.py  step.py  storage.py
src/relay/domain/: __init__.py  artifact.py  context.py  events.py  workflow.py
src/relay/engine/: __init__.py  event_bus.py  executor.py  orchestrator.py  plugin_registry.py  retry.py  state.py
src/relay/surfaces/: __init__.py
src/relay/workflow/: __init__.py  compiler.py  parser.py  validator.py
tests/: conftest.py  test_apps.py  test_automation.py  test_cli.py  test_pipelines.py  test_update.py  test_vault.py
tests/e2e/: test_instagram_to_youtube.py
tests/unit/: test_plugins.py  test_surfaces.py
(+14 files in other folders)
