[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay"
version = "0.2.1"
description = "A local-first, open-source workflow automation platform (`apps`, `pipelines`, `automation`, `cli`)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Relay Community" }
]
keywords = ["automation", "workflow", "local-first", "playwright", "ffmpeg", "yt-dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "playwright>=1.43.0",
    "httpx>=0.27.0",
    "yt-dlp>=2024.03.10",
    "keyring>=24.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "mypy>=1.9.0",
    "ruff>=0.3.5",
    "pyinstaller>=6.5.0",
]

[project.scripts]
relay = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "pipelines", "automation", "cli"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.pyright]
include = ["apps", "pipelines", "automation", "cli", "tests"]
extraPaths = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
